Refactoring & packages update
